--- a/led/debian/control
+++ b/led/debian/control
@@ -1,10 +1,43 @@
-Package: leds
-Version: 1.0
-Architecture: all
-Maintainer: Grupo Diplomado <david.proteco@gmail.com>
-Depends: python (>=2.0)
-Priority: standard
-Multi-Arch: foreign
-Homepage: http://github.com/v1x0
-Build-Depends: debhelper (>=9)
-Description: Programa para mover un servo de leds
+Package: parted
+Version: 1.4.24-4
+Section: admin
+Priority: optional
+Architecture: i386
+Depends: e2fsprogs (>= 1.27-2)
+Suggests: parted-doc
+Conflicts: fsresize
+Replaces: fsresize
+Installed-Size: 76
+Maintainer: Timshel Knoll <timshel@debian.org>
+Description: The GNU Parted disk partition resizing program
+ GNU Parted is a program that allows you to create, destroy,
+ resize, move and copy hard disk partitions. This is useful
+ for creating space for new operating systems, reorganizing
+ disk usage, and copying data to new hard disks.
+ .
+ This package contains the Parted binary and manual page.
+ .
+ Parted currently supports DOS, Mac, Sun, BSD, GPT and PC98
+ disklabels/partition tables, as well as a 'loop' (raw disk)
+ type which allows use on RAID/LVM. Filesystems supported are
+ ext2, ext3, FAT (FAT16 and FAT32) and linux-swap. Parted can
+ also detect HFS (Mac OS), JFS, NTFS, ReiserFS, UFS and XFS
+ filesystems, but cannot create/remove/resize/check these
+ filesystems yet.
+ .
+ The nature of this software means that any bugs could cause
+ massive data loss. While there are no known bugs at the moment,
+ they could exist, so please back up all important files before
+ running it, and do so at your own risk.
+
+
+#Package: leds
+#Version: 1.0
+#Architecture: all
+#Maintainer: Grupo Diplomado <david.proteco@gmail.com>
+#Depends: python (>= 2.0)
+#Priority: standard
+#Multi-Arch: foreign
+#Homepage: http://github.com/v1x0
+#Build-Depends: debhelper (> =9)
+#Description: Programa para mover un servo de leds
